fix refetch, add users, sort games, fix styling
